<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    tools:context=".ProfileActivity"
    tools:ignore="HardcodedText,RtlHardcoded">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="onClick"
        android:text="@string/sign_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/my_listings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="onClick"
        android:text="Listings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:onClick="onClick"
        android:text="Edit Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <TextView
        android:id="@+id/zip_code"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/state_code"
        app:layout_constraintTop_toBottomOf="@+id/street_name" />

    <TextView
        android:id="@+id/state_code"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/city_name"
        app:layout_constraintTop_toBottomOf="@+id/street_name" />

    <TextView
        android:id="@+id/city_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street_number" />

    <TextView
        android:id="@+id/street_number"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/street_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />

    <TextView
        android:id="@+id/street_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="30dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/phone_number"
        app:layout_constraintEnd_toStartOf="@+id/last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="30dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="50dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="top|left"
        android:includeFontPadding="true"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_name"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="79dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="Sold:"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_name" />

    <TextView
        android:id="@+id/bought"
        android:layout_width="79dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="Bought:"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/sold_metric"
        app:layout_constraintTop_toBottomOf="@+id/state_code" />

    <TextView
        android:id="@+id/sold_metric"
        android:layout_width="69dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/city_name" />

    <TextView
        android:id="@+id/bought_metric"
        android:layout_width="69dp"
        android:layout_height="39dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/bought"
        app:layout_constraintTop_toBottomOf="@+id/zip_code" />

</androidx.constraintlayout.widget.ConstraintLayout>