...
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    tools:context=".EditProfileActivity"
    tools:ignore="HardcodedText,Autofill,RtlHardcoded">

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="onClick"
        android:text="✖"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/update"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_phone_number"
        android:layout_width="0dp"
        android:layout_height="40dp"
...
        app:layout_constraintBottom_toTopOf="@+id/edit_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_first_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="150dp"
...
