...
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/search_bar"
        app:layout_constraintEnd_toEndOf="@+id/search_bar"
        app:layout_constraintTop_toTopOf="@+id/search_bar" />

    <ImageButton
        android:id="@+id/dashboard_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:onClick="onClick"
...
